--- a/tests/ct.yaml
+++ b/tests/ct.yaml
@@ -1,6 +1,6 @@
 # See https://github.com/helm/chart-testing#configuration
 remote: origin
-target-branch: master
+target-branch: main
 chart-repos:
   - fulllearn=https://fulllearn.duckdns.org/charts
 helm-extra-args: --timeout 800s
