--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: release
           command: |
-            echo "export CR_REPO_URL=https://falcosecurity.github.io/charts" >> $BASH_ENV
+            echo "export CR_REPO_URL=https://fulllearn.duckdns.org/charts" >> $BASH_ENV
             echo "export GIT_USERNAME=$CIRCLE_PROJECT_USERNAME" >> $BASH_ENV
             echo "export GIT_REPOSITORY_NAME=$CIRCLE_PROJECT_REPONAME" >> $BASH_ENV
             .circleci/install_tools.sh
@@ -53,7 +53,7 @@ workflows:
             - lint-scripts
             - lint-charts
       - release-charts:
-          context: falco
+          context: learn
           filters:
             tags:
               ignore: /.*/
