--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: helm/chart-testing-action@v1.0.0
         with:
           command: lint
-          config: ct.yaml
+          config: tests/ct.yaml
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.0.0
@@ -32,7 +32,7 @@ jobs:
         uses: helm/chart-testing-action@v1.0.0
         with:
           command: install
-          config: ct.yaml
+          config: tests/ct.yaml
   release:
     needs: lint-test
     runs-on: ubuntu-latest
