--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,10 +52,14 @@ jobs:
       # See https://github.com/helm/chart-releaser-action/issues/6
       - name: Install Helm
         run: |
-          curl -sSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get
+          curl -fsSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
-          helm init --client-only
+          helm repo add gitlab    https://charts.gitlab.io/
+          helm repo add bitnami   https://charts.bitnami.com/bitnami
+          helm repo add stable    https://charts.helm.sh/stable
+          helm repo add fulllearn https://fulllearn.duckdns.org/charts
+          helm repo update
 
       - name: Add dependency chart repos
         run: |
